# NearLink

./: .gitignore
BS25_1.10.113/DK225_01/: .gitignore  CMakeLists.txt  (+1 more)
BS25_1.10.113/DK225_01/application/bs25/: CMakeLists.txt
BS25_1.10.113/DK225_01/application/bs25/bs25_acore/: CMakeLists.txt  app_os_init.c  app_os_init.h  main.c  startup.S  system_init.c  system_init.h
BS25_1.10.113/DK225_01/application/bs25/bs25_acore/ota/: ota_upgrade.c  ota_upgrade_handle.c
BS25_1.10.113/DK225_01/application/bs25/bs25_pm/: CMakeLists.txt  app_main.c  app_main.h  pm_ble_hid_server.c  pm_ble_hid_server.h  pm_ble_server.c  pm_ble_server.h  pm_ble_server_adv.c  pm_ble_server_adv.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/: CMakeLists.txt
BS25_1.10.113/DK225_01/drivers/chips/bs25/arch/include/: arch_barrier.h  arch_encoding.h  arch_port.h  interrupt.h  mpu.h  oam_trace.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/clocks/drivers/: clocks.c  clocks.h  clocks_config.c  clocks_config.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/clocks/hal/: hal_clocks.c  hal_clocks.h  hal_clocks_glb.c  hal_clocks_glb.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/clocks_core/hal/: hal_32k_clock.c  hal_32k_clock.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/config/otp/: otp_map.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/include/acore/: chip_core_irq.h  platform_core.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/include/bt_core/: chip_core_definition.h  chip_core_irq.h  core.h  platform_core.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/interrupt/: vectors.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/interrupt/acore/: interrupt_adapter.c  interrupt_os_adapter.c  vectors.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/memory/: hal_memory.c  hal_memory.h  hal_memory_apps.c  hal_memory_apps.h  hal_memory_security.c  hal_memory_security.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/pm_lpc/: CMakeLists.txt  pm_lpc.c  pm_lpc.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/pmu/: pmu.c  pmu.h  pmu_bt_sub.c  pmu_bt_sub.h  pmu_buck_ldo.c  pmu_buck_ldo.h  pmu_cmu.c  pmu_cmu.h  pmu_interrupt.c  pmu_interrupt.h  pmu_ldo.c  pmu_ldo.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/: CMakeLists.txt
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/adc/: CMakeLists.txt  adc_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/calendar/: CMakeLists.txt  calendar_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/dma/: CMakeLists.txt  dma_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/eflash/: CMakeLists.txt  eflash_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/flash/: CMakeLists.txt  flash_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/gpio/: CMakeLists.txt  gpio_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/i2c/: CMakeLists.txt  i2c_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/inc/: CMakeLists.txt  adc_porting.h  calendar_porting.h  dma_porting.h  eflash_porting.h  flash_porting.h  gpio_porting.h  i2c_porting.h  keyscan_porting.h  lcd_port.h  mem_monitor_porting.h  mouse_sensor_port.h  pal_sdio_slave_config_port.h  pal_sec_config_port.h  pdm_porting.h  pinctrl_porting.h  pm_clock_porting.h  pm_pmu_porting.h  pmp_porting.h  pwm_porting.h  qdec_porting.h  rtc_porting.h  sec_rsa_port.h  sio_porting.h  spi_porting.h  tcxo_porting.h  timer_porting.h  uart_porting.h  usb_port.h  usb_status.h  watchdog_porting.h  xip_porting.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/keyscan/: CMakeLists.txt  keyscan_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/liteos/: CMakeLists.txt  idle_config.c  memory_info.c  os_dfx.c  tick_timer.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/mem_monitor/: CMakeLists.txt  mem_monitor_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/pdm/: CMakeLists.txt  pdm_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/pinctrl/: CMakeLists.txt  pinctrl_porting_bs25.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/pmp/: CMakeLists.txt  pmp_porting.c  pmp_porting.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/pwm/: CMakeLists.txt  pwm_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/qdec/: CMakeLists.txt  qdec_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/reboot/: CMakeLists.txt
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/rtc_unified/: rtc_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/sec_rsa/: CMakeLists.txt  sec_rsa_port.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/security/: CMakeLists.txt
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/sio/: CMakeLists.txt  sio_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/spi/: CMakeLists.txt  spi_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/systick/: CMakeLists.txt  systick_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/tcxo/: CMakeLists.txt
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/timer/: CMakeLists.txt  timer_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/uart/: CMakeLists.txt  uart_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/usb_unified/: CMakeLists.txt  usb_porting.c  usb_porting.h
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/watchdog/: CMakeLists.txt  watchdog_porting.c
BS25_1.10.113/DK225_01/drivers/chips/bs25/porting/xip/: CMakeLists.txt  xip_porting.c
BS25_1.10.113/DK225_01/drivers/drivers/driver/audio/: CMakeLists.txt
BS25_1.10.113/DK225_01/middleware/services/srv_tiot_host/: CMakeLists.txt  Kconfig  tiot_release.cmake
BS25_1.10.113/DK225_01/middleware/services/srv_tiot_host/tiot_driver/: Kconfig
BS25_1.10.113/DK225_01/middleware/services/srv_tiot_host/tiot_driver/common/: Kconfig
BS25_1.10.113/DK225_01/middleware/services/srv_tiot_host/tiot_driver_host/: CMakeLists.txt  Makefile
BS25_1.10.113/DK225_01/middleware/services/srv_tiot_host/tiot_driver_host/common/: CMakeLists.txt
BS25_1.10.113/DK225_01/middleware/services/srv_tiot_host/tiot_driver_host/product_porting/: CMakeLists.txt  Makefile  tiot_autoconfig.h  tiot_defconfig
(+991 files in other folders)
